--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="windowBG">#000000</color>
+    <color name="background">#101010</color>
+    <color name="ripple">#1A000000</color>
     <color name="white">#000000</color>
     <color name="black">#FFFFFF</color>
     <color name="blue">#1C53F4</color>
     <color name="red">#FF3442</color>
     <color name="green">#00BD62</color>
-    <color name="grayLight">#959595</color>
-    <color name="grayMedium">#E9E9E9</color>
-    <color name="grayDark">#F3F3F3</color>
-
-
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="grayLight">#141414</color>
+    <color name="grayMedium">#1F1F1F</color>
+    <color name="grayDark">#4E4E4E</color>
 </resources>
