Fix Navigation Issues

--- a/app/src/main/res/layout-notlong/activity_landing.xml
+++ b/app/src/main/res/layout-notlong/activity_landing.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/iv_landing_header"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:adjustViewBounds="true"
         android:alpha="0.80"
         android:contentDescription="Landing Header"
@@ -27,13 +27,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="28dp"
-        android:layout_marginVertical="12dp"
+        android:layout_marginVertical="4dp"
         android:fontFamily="@font/nunito_black"
         android:gravity="start|center_vertical"
-        android:text="@string/login_text_title"
+        android:text="@string/forgot_pw_text_title"
         android:textAlignment="gravity"
         android:textColor="@android:color/white"
-        android:textSize="34sp"
+        android:textSize="28sp"
         app:layout_constraintBottom_toTopOf="@+id/fcv_landing"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
