--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -167,6 +167,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_register_login"
+            style="@style/Theme.WarrantyRoster.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
@@ -176,7 +177,6 @@
             android:text="@string/register_btn_register"
             android:textColor="@android:color/white"
             android:textSize="16sp"
-            app:cornerRadius="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ti_register_layout_retype_password" />
@@ -192,26 +192,25 @@
             android:textAlignment="gravity"
             android:textColor="@color/black"
             android:textSize="14sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tv_register_register"
-            app:layout_constraintEnd_toStartOf="@+id/tv_register_register"
+            app:layout_constraintBaseline_toBaselineOf="@+id/btn_register_register"
+            app:layout_constraintEnd_toStartOf="@+id/btn_register_register"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_register_register"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_register_register"
+            style="@style/Theme.WarrantyRoster.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="76dp"
+            android:layout_marginTop="71dp"
             android:layout_marginEnd="4dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/state_pressed_ripple"
-            android:clickable="true"
-            android:focusable="true"
+            android:layout_marginBottom="19dp"
             android:fontFamily="@font/nunito_bold"
             android:gravity="center"
-            android:maxLines="1"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
             android:padding="5dp"
-            android:text="@string/register_text_login"
+            android:text="@string/register_btn_login"
             android:textAlignment="gravity"
             android:textColor="@color/blue"
             android:textSize="14sp"
