--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -125,8 +125,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="27dp"
+            android:layout_marginTop="3dp"
             android:fontFamily="@font/nunito_light"
             android:gravity="center"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
             android:maxLines="1"
             android:minWidth="0dp"
             android:minHeight="0dp"
@@ -180,6 +183,8 @@
             android:layout_marginBottom="19dp"
             android:fontFamily="@font/nunito_bold"
             android:gravity="center"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:padding="5dp"
