--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -207,6 +207,8 @@
             android:layout_marginBottom="19dp"
             android:fontFamily="@font/nunito_bold"
             android:gravity="center"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:padding="5dp"
