Add Loading CircularProgressBar

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -89,6 +89,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ti_forgot_pw_layout_email" />
 
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/cpi_forgot_pw"
+            style="@style/Theme.WarrantyRoster.LoadingProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_forgot_pw_send"
+            app:layout_constraintEnd_toEndOf="@+id/btn_forgot_pw_send"
+            app:layout_constraintStart_toStartOf="@+id/btn_forgot_pw_send"
+            app:layout_constraintTop_toTopOf="@+id/btn_forgot_pw_send" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_forgot_pw_return"
             style="@style/Theme.WarrantyRoster.TextButton"
