--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -180,6 +180,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ti_register_layout_retype_password" />
 
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/cpi_register"
+            style="@style/Theme.WarrantyRoster.LoadingProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_register_login"
+            app:layout_constraintEnd_toEndOf="@+id/btn_register_login"
+            app:layout_constraintStart_toStartOf="@+id/btn_register_login"
+            app:layout_constraintTop_toTopOf="@+id/btn_register_login" />
+
         <TextView
             android:id="@+id/tv_register_register_title"
             android:layout_width="wrap_content"
