--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -40,6 +40,14 @@
     <!--        <item name="android:layout_marginTop">3dp</item>-->
     <!--    </style>-->
 
+    <style name="Theme.WarrantyRoster.LoadingProgressBar" parent="Widget.MaterialComponents.CircularProgressIndicator.Small">
+        <item name="android:indeterminate">true</item>
+        <item name="hideAnimationBehavior">inward</item>
+        <item name="indicatorColor">@android:color/white</item>
+        <item name="showAnimationBehavior">outward</item>
+        <item name="trackCornerRadius">12dp</item>
+    </style>
+
     <style name="Theme.WarrantyRoster.Button" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.Button.Appearance</item>
         <item name="textAllCaps">false</item>
