--- a/app/src/main/res/layout/fragment_forgot_pw.xml
+++ b/app/src/main/res/layout/fragment_forgot_pw.xml
@@ -53,6 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
             android:layout_marginTop="4dp"
+            app:errorTextAppearance="@style/Theme.WarrantyRoster.TextInputLayout.Error"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pw_title_email">
