--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,8 +15,10 @@
     <style name="Theme.WarrantyRoster.Splash" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/blue</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+        <item name="android:windowSplashScreenBrandingImage" tools:targetApi="s">
+            @drawable/ic_logo_xeniac
+        </item>
         <item name="postSplashScreenTheme">@style/Theme.WarrantyRoster.Landing</item>
-        <!--        <item name="android:windowSplashScreenBrandingImage" tools:targetApi="s">@drawable/ic_logo_xeniac</item>-->
     </style>
 
     <style name="Theme.WarrantyRoster.Landing" parent="Theme.WarrantyRoster">
