--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -169,7 +169,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_register_login"
+            android:id="@+id/btn_register_register"
             style="@style/Theme.WarrantyRoster.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -189,10 +189,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_register_login"
-            app:layout_constraintEnd_toEndOf="@+id/btn_register_login"
-            app:layout_constraintStart_toStartOf="@+id/btn_register_login"
-            app:layout_constraintTop_toTopOf="@+id/btn_register_login" />
+            app:layout_constraintBottom_toBottomOf="@+id/btn_register_register"
+            app:layout_constraintEnd_toEndOf="@+id/btn_register_register"
+            app:layout_constraintStart_toStartOf="@+id/btn_register_register"
+            app:layout_constraintTop_toTopOf="@+id/btn_register_register" />
 
         <TextView
             android:id="@+id/tv_register_register_title"
@@ -205,13 +205,13 @@
             android:textAlignment="gravity"
             android:textColor="@color/black"
             android:textSize="14sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/btn_register_register"
-            app:layout_constraintEnd_toStartOf="@+id/btn_register_register"
+            app:layout_constraintBaseline_toBaselineOf="@+id/btn_register_login"
+            app:layout_constraintEnd_toStartOf="@+id/btn_register_login"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_register_register"
+            android:id="@+id/btn_register_login"
             style="@style/Theme.WarrantyRoster.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -228,7 +228,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toEndOf="@+id/tv_register_register_title"
-            app:layout_constraintTop_toBottomOf="@+id/btn_register_login" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_register_register" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
