--- a/app/src/main/res/drawable/shape_rounded_landing.xml
+++ b/app/src/main/res/drawable/shape_rounded_landing.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/background" />
+    <solid android:color="@color/windowBG" />
 
     <corners
         android:topLeftRadius="40dp"
