--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background">#FFFFFF</color>
-    <color name="ripple">#1AFFFFFF</color>
+    <color name="windowBG">#FFFFFF</color>
+    <color name="cardBG">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="navyBlue">#00144F</color>
     <color name="blue">#1C53F4</color>
-    <color name="red">#FF3442</color>
     <color name="green">#00BD62</color>
+    <color name="red">#FF3442</color>
+    <color name="orange">#FF9100</color>
     <color name="grayLight">#F3F3F3</color>
     <color name="grayMedium">#E9E9E9</color>
     <color name="grayDark">#959595</color>
