--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="windowBG">#101010</color>
-    <color name="cardBG">#131313</color>
+    <color name="cardBG">#191919</color>
     <color name="white">#000000</color>
     <color name="black">#FFFFFF</color>
     <color name="navyBlue">#DEF4FD</color>
@@ -9,7 +9,7 @@
     <color name="green">#00BD62</color>
     <color name="red">#FF3442</color>
     <color name="orange">#FF9100</color>
-    <color name="grayLight">#191919</color>
-    <color name="grayMedium">#282828</color>
-    <color name="grayDark">#7A7A7A</color>
+    <color name="grayLight">#1F1F1F</color>
+    <color name="grayMedium">#2E2E2E</color>
+    <color name="grayDark">#808080</color>
 </resources>
