--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.WarrantyRoster" parent="Theme.MaterialComponents.DayNight">
+    <style name="Theme.WarrantyRoster" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowBackground">@color/windowBG</item>
         <item name="colorPrimary">@color/blue</item>
         <item name="colorSecondary">@color/blue</item>
@@ -9,8 +9,6 @@
     </style>
 
     <style name="Theme.WarrantyRoster.Landing" parent="Theme.WarrantyRoster">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@color/blue</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
     </style>
