--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.WarrantyRoster" parent="Theme.MaterialComponents.DayNight">
+    <style name="Theme.WarrantyRoster" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:windowBackground">@color/windowBG</item>
         <item name="colorPrimary">@color/blue</item>
         <item name="colorSecondary">@color/blue</item>
@@ -18,8 +18,6 @@
     </style>
 
     <style name="Theme.WarrantyRoster.Landing" parent="Theme.WarrantyRoster">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@color/blue</item>
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
     </style>
@@ -37,7 +35,8 @@
         <item name="errorTextColor">@color/red</item>
         <item name="errorIconDrawable">@null</item>
         <item name="errorTextAppearance">@style/Theme.WarrantyRoster.TextInputLayout.Error</item>
-        <item name="helperTextTextAppearance">@style/Theme.WarrantyRoster.TextInputLayout.Helper</item>
+        <item name="helperTextTextAppearance">@style/Theme.WarrantyRoster.TextInputLayout.Helper
+        </item>
     </style>
 
     <style name="Theme.WarrantyRoster.TextInputLayout.Error" parent="Widget.MaterialComponents.TextView">
@@ -88,6 +87,11 @@
     <style name="Theme.WarrantyRoster.TextButton.Appearance">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">4dp</item>
+    </style>
+
+    <style name="Theme.WarrantyRoster.BottomNavigationView.Text" parent="Widget.MaterialComponents.TextView">
+        <item name="android:fontFamily">@font/nunito_regular</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
 </resources>
