--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         app:backgroundTint="@color/cardBG"
+        app:contentInsetEnd="16dp"
+        app:contentInsetStart="16dp"
         app:fabCradleMargin="8dp"
         app:fabCradleRoundedCornerRadius="20dp">
 
@@ -29,7 +31,6 @@
             android:id="@+id/bnv_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginEnd="16dp"
             app:itemIconTint="@color/color_bottom_nav"
             app:itemTextAppearanceActive="@style/Theme.WarrantyRoster.BottomNavigationView.Text"
             app:itemTextColor="@color/color_bottom_nav"
