--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:backgroundTint="@color/surface"
         app:contentInsetEnd="16dp"
         app:contentInsetStart="16dp"
         app:fabCradleMargin="8dp"
@@ -31,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:itemIconTint="@color/color_bottom_nav"
-            app:itemRippleColor="@color/grayLight"
+            app:itemRippleColor="@color/grayMedium"
             app:itemTextAppearanceActive="@style/Theme.WarrantyRoster.BottomNavigationView.Text"
             app:itemTextColor="@color/color_bottom_nav"
             app:labelVisibilityMode="selected"
